# socomm

./: CMakeLists.txt  README.md
include/socomm/: socomm.h
src/socomm/: CMakeLists.txt  broadcast_handler.c  broadcast_handler.cpp  broadcast_handler.h  buffer.c  buffer.h  conn_handler.c  conn_handler.h  errors.h  generic_array.c  generic_array.h  header.c  header.h  header_serde.c  header_serde.h  helpers.c  helpers.h  ledger.c  ledger.h  node.c  node.cpp  node.h  socomm.cpp  socomm.h  str.c  str.h  uuid.h
src/socomm/uuid/: uuid.c
test/: CMakeLists.txt  broadcast_handler.test.c  generic_array.test.c  ledger.test.c  main.test.c  main.test.cpp  message.test.c
test/helpers/: test_helpers.c  test_helpers.h
